--- a/public/css/contestant.css
+++ b/public/css/contestant.css
@@ -269,25 +269,25 @@ html, body {
 .grid-2x2 .player-card,
 .grid-2x3 .player-card {
     width: calc(50% - 7.5px);
-    max-width: 300px;
+    min-width: 150px;
 }
 
 .grid-3x3 .player-card,
 .grid-3x4 .player-card {
     width: calc(33.333% - 10px);
-    max-width: 200px;
+    min-width: 120px;
 }
 
 .grid-4x4 .player-card,
 .grid-4x5 .player-card {
     width: calc(25% - 11.25px);
-    max-width: 180px;
+    min-width: 100px;
 }
 
 .grid-5x5 .player-card,
 .grid-5x6 .player-card {
     width: calc(20% - 12px);
-    max-width: 150px;
+    min-width: 80px;
 }
 
 /* Dynamic border-radius classes based on player count */
